# serializer version: 1
# name: TestIOQuake3Generator.test_generate[ioquake3]
  tuple(
    list([
      '/userdata/roms/quake3/ioquake3',
      '+set',
      'fs_game',
      '"baseq3"',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestIOQuake3Generator.test_generate[ioquake3][baseq3 config]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate[ioquake3][missionpack config]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate[vkquake3]
  tuple(
    list([
      '/userdata/roms/quake3/ioquake3',
      '+set',
      'fs_game',
      '"baseq3"',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestIOQuake3Generator.test_generate[vkquake3][baseq3 config]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "opengl2"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate[vkquake3][missionpack config]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "opengl2"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_config[ioquake3-{'ioquake3_mem': '64'}]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "64"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_config[vkquake3-{'ioquake3_mem': '64'}]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "64"
  seta cl_renderer "opengl2"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_config[vkquake3-{'vkquake3_api': 'opengl2'}]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "opengl2"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_config[vkquake3-{'vkquake3_api': 'vulkan'}]
  '''
  // generated by quake, do not modify
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "vulkan"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_LEFTSHOULDER "weapnext"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[ioquake3-{'ioquake3_mem': '64'}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "64"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[ioquake3-{}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[vkquake3-{'ioquake3_mem': '64'}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "64"
  seta cl_renderer "opengl2"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[vkquake3-{'vkquake3_api': 'opengl2'}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "opengl2"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[vkquake3-{'vkquake3_api': 'vulkan'}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "vulkan"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_generate_existing[vkquake3-{}][baseq3 config]
  '''
  seta r_mode "-1"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  seta com_hunkMegs "256"
  seta cl_renderer "opengl2"
  bind PAD0_LEFTSHOULDER "weapnext"
  seta r_customwidth "1920"
  seta r_customheight "1080"
  seta in_joystickUseAnalog "1"
  seta in_joystick "1"
  seta cl_allowDownload "1"
  bind PAD0_A "+moveup"
  bind PAD0_X "+movedown"
  bind PAD0_Y "+button2"
  bind PAD0_RIGHTSHOULDER "weapprev"
  bind PAD0_LEFTSTICK_LEFT "+moveleft"
  bind PAD0_LEFTSTICK_RIGHT "+moveright"
  bind PAD0_LEFTSTICK_UP "+forward"
  bind PAD0_LEFTSTICK_DOWN "+back"
  bind PAD0_RIGHTSTICK_LEFT "+left"
  bind PAD0_RIGHTSTICK_RIGHT "+right"
  bind PAD0_RIGHTSTICK_UP "+lookup"
  bind PAD0_RIGHTSTICK_DOWN "+lookdown"
  bind PAD0_LEFTTRIGGER "+speed"
  bind PAD0_RIGHTTRIGGER "+attack"
  
  '''
# ---
# name: TestIOQuake3Generator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': list([
        'KEY_LEFTSHIFT',
        'KEY_ESC',
      ]),
    }),
    'name': 'ioquake3',
  })
# ---
